Fix wrong color on toggler mobile menu

--- a/themes/platinum/assets/css/creative.css
+++ b/themes/platinum/assets/css/creative.css
@@ -17,7 +17,7 @@ p{font-size:16px;line-height:1.5;margin-bottom:20px}
 .bg-primary{background-color:#F05F40!important}
 .bg-dark{color:#fff;background-color:#222!important}
 .text-faded{color:rgba(255,255,255,.7)}
-section {padding:100px 0}
+section {padding:50px 0}
 section#header{padding:0}
 .section-heading{margin-top:0}
 ::-moz-selection{color:#fff;background:#222;text-shadow:none}
@@ -55,7 +55,8 @@ header.masthead .header-content .header-content-inner p{font-size:16px;font-weig
   header.masthead .header-content .header-content-inner p{font-size:18px;max-width:80%;margin-right:auto;margin-left:auto}
 }
 .service-box{max-width:400px;margin:50px auto 0}
-@media (min-width:992px){.service-box{margin:20px auto 0}
+@media (min-width:992px){
+  .service-box{margin:20px auto 0}
 }
 .service-box p{margin-bottom:0}
 .portfolio-box{position:relative;display:block;max-width:650px;margin:0 auto}
@@ -68,7 +69,8 @@ header.masthead .header-content .header-content-inner p{font-size:16px;font-weig
 .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name{font-size:18px}
 .portfolio-box:hover .portfolio-box-caption{opacity:1}
 .portfolio-box:focus{outline:0}
-@media (min-width:768px){.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category{font-size:16px}
+@media (min-width:768px){
+  .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category{font-size:16px}
   .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name{font-size:22px}
 }
 .call-to-action{padding:50px 0}
@@ -129,13 +131,12 @@ header.masthead .header-content .header-content-inner p{font-size:16px;font-weig
 .sidebox .overlay.cap-icon.more a div:before{width:16px;height:16px;font-size:16px;margin:-8px 0 0 -8px}
 .sidebox .overlay img {width: 100%;height: 100%;}
 .top-header {min-height: 50px;}
-footer .footer-above {
-  padding: 100px;
-  background-color: #2c3e50;
-  color: #fff;
-}
+footer .footer-above {padding: 50px 0;background-color: #2c3e50;color: #fff;}
 footer .footer-above a {color: #fff;}
-footer .footer-below {
-  padding: 50px 0;
-  background-color: #fff;
+footer .footer-below {padding: 50px 0;background-color: #fff;}
+@media (max-width: 991px) {
+  .navbar-light .navbar-toggler {color: rgba(255,255,255,1);border-color: rgba(255,255,255,1);}
+  .navbar-toggler {background: #fff 0;}
+  .navbar-toggler:hover {cursor: pointer;}
+  #mainNav .navbar-nav > li.nav-item > a.nav-link, #mainNav .navbar-nav > li.nav-item > a.nav-link:focus {color: #fff;}
 }
